--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,14 @@
 ---
-import Main from "../layouts/Main.astro";
+import Main from "@layouts/Main.astro";
 ---
 
-<Main title="woops!!!">
-	<h1>
-		woops! 404
+<Main title="404">
+	<h1 style="margin: auto; line-height: 1.3;">
+		<span>
+			404
+		</span>
+		<span style="display: block;">
+			Page not found
+		</span>
 	</h1>
 </Main>
